tests/miz/fail/types/fail_type_elaboration_argument_bearing_structure_gap_001.miz
definition
  struct LocalStruct of p where
    field carrier -> set;
  end;
end;

reserve s for LocalStruct of a;
